--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zerodev/web3auth",
-  "version": "4.0.0-alpha.0",
+  "version": "4.0.0",
   "main": "dist/index.js",
   "files": [
     "dist"
@@ -16,7 +16,7 @@
     "@web3auth/modal": "5.0.1",
     "@web3auth/no-modal": "5.0.1",
     "@web3auth/openlogin-adapter": "5.0.1",
-    "@zerodev/sdk": "4.0.2-alpha.25"
+    "@zerodev/sdk": "4.0.0"
   },
   "author": "",
   "license": "ISC",
