--- a/package.json
+++ b/package.json
@@ -1,31 +1,41 @@
 {
   "name": "@zerodev/web3auth",
-  "version": "4.0.10",
-  "main": "dist/index.js",
+  "version": "4.1.0",
   "files": [
     "dist"
   ],
+  "type": "module",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/types/index.d.ts",
+  "typings": "./dist/types/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/types/index.d.ts",
+      "import": "./dist/esm/index.js",
+      "default": "./dist/cjs/index.js"
+    },
+    "./package.json": "./package.json"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsup src --dts",
-    "dev": "tsup src --watch --dts"
+    "clean": "rm -rf ./dist",
+    "build:cjs": "tsc --project tsconfig.json --module commonjs --outDir ./dist/cjs --removeComments --verbatimModuleSyntax false && echo > ./dist/cjs/package.json '{\"type\":\"commonjs\"}'",
+    "build:esm": "tsc --project tsconfig.json --module es2015 --outDir ./dist/esm --removeComments && echo > ./dist/esm/package.json '{\"type\":\"module\"}'",
+    "build:types": "tsc --project tsconfig.json --module esnext --declarationDir ./dist/types --emitDeclarationOnly --declaration --declarationMap",
+    "build": "npm run clean && npm run build:cjs && npm run build:esm && npm run build:types"
   },
   "dependencies": {
-    "@walletconnect/client": "^1.8.0",
-    "@web3auth/base": "5.0.1",
-    "@web3auth/modal": "5.0.1",
-    "@web3auth/no-modal": "5.0.1",
-    "@web3auth/openlogin-adapter": "5.0.1",
-    "@zerodev/sdk": "4.0.16"
+    "@web3auth/base": "7.0.1",
+    "@web3auth/modal": "7.0.1",
+    "@web3auth/no-modal": "7.0.1",
+    "@web3auth/openlogin-adapter": "7.0.1",
+    "@zerodev/sdk": "4.0.17"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@swc/core": "^1.3.36",
-    "tsup": "6.4.0",
     "typescript": "^5.0.4"
   },
-  "types": "./dist/index.d.ts",
   "description": "",
   "publishConfig": {
     "access": "public"
