--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@web3auth/modal": "7.0.1",
     "@web3auth/no-modal": "7.0.1",
     "@web3auth/openlogin-adapter": "7.0.1",
+    "@web3auth/ethereum-provider": "7.0.1",
     "@zerodev/sdk": "4.0.17"
   },
   "author": "",
