--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zerodev/web3auth",
-  "version": "4.1.7",
+  "version": "4.1.8",
   "files": [
     "dist"
   ],
@@ -27,10 +27,10 @@
   "dependencies": {
     "@web3auth/base": "7.0.1",
     "@web3auth/modal": "7.0.3",
-    "@web3auth/no-modal": "7.0.2-beta.0",
-    "@web3auth/openlogin-adapter": "7.0.2-beta.0",
+    "@web3auth/no-modal": "7.0.1",
+    "@web3auth/openlogin-adapter": "7.0.1",
     "@web3auth/ethereum-provider": "7.0.2",
-    "@zerodev/sdk": "4.0.20"
+    "@zerodev/sdk": "4.0.24"
   },
   "author": "",
   "license": "ISC",
