--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "@zerodev/web3auth",
-  "version": "4.1.13",
+  "version": "4.1.14",
   "files": [
     "dist"
   ],
-  "type": "module",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
   "types": "./dist/types/index.d.ts",
@@ -19,8 +18,8 @@
   },
   "scripts": {
     "clean": "rm -rf ./dist",
-    "build:cjs": "tsc --project tsconfig.json --module commonjs --outDir ./dist/cjs --removeComments --verbatimModuleSyntax false && echo > ./dist/cjs/package.json '{\"type\":\"commonjs\"}'",
-    "build:esm": "tsc --project tsconfig.json --module es2015 --outDir ./dist/esm --removeComments && echo > ./dist/esm/package.json '{\"type\":\"module\"}'",
+    "build:cjs": "tsc --project tsconfig.json --module commonjs --outDir ./dist/cjs --removeComments --verbatimModuleSyntax false",
+    "build:esm": "tsc --project tsconfig.json --module esnext --outDir ./dist/esm --removeComments",
     "build:types": "tsc --project tsconfig.json --module esnext --declarationDir ./dist/types --emitDeclarationOnly --declaration --declarationMap",
     "build": "npm run clean && npm run build:cjs && npm run build:esm && npm run build:types"
   },
