--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zerodevapp/web3auth",
-  "version": "3.2.8",
+  "version": "3.2.8-experimental.3",
   "main": "dist/index.js",
   "files": [
     "dist"
@@ -11,11 +11,11 @@
     "dev": "tsup src --watch --dts"
   },
   "dependencies": {
-    "@web3auth/base": "7.0.1",
-    "@web3auth/modal": "7.0.3",
-    "@web3auth/no-modal": "7.0.1",
-    "@web3auth/openlogin-adapter": "7.0.1",
-    "@web3auth/ethereum-provider": "7.0.2",
+    "@web3auth/base": "7.0.4",
+    "@web3auth/modal": "7.0.4",
+    "@web3auth/no-modal": "7.0.4",
+    "@web3auth/openlogin-adapter": "7.0.4",
+    "@web3auth/ethereum-provider": "7.0.4",
     "@zerodevapp/sdk": "3.2.10"
   },
   "peerDependencies": {
